@@ -84,6 +84,7 @@
 	- fix: package relocations were broken (#75057).
 	- error if querying with iterator on different sized arrays.
 	- add rpmfi methods to access color, class, and dependencies.
+	- don't segfault with packages produced by rpm-2.93 (#80618).
 
 4.0.4 -> 4.1:
 	- loosely wire beecrypt library into rpm.
